fix(toc): add wrapping of 80vh to toc's container

--- a/apps/guides/src/app/pages/guide/guide/guide.component.less
+++ b/apps/guides/src/app/pages/guide/guide/guide.component.less
@@ -1,5 +1,11 @@
 @import '../../../../variables';
 
+::ng-deep {
+  .ant-anchor-wrapper {
+    max-height: 80vh !important;
+  }
+}
+
 .author-avatar {
   width: 32px;
   height: 32px;
